HAW scraping funktioniert auch

--- a/src/python-webscraper/webscraping.ipynb
+++ b/src/python-webscraper/webscraping.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
+    "import re\n",
     "from bs4 import BeautifulSoup\n",
     "from dataclasses import dataclass\n",
     "\n",
@@ -21,7 +22,7 @@
     "class Person:\n",
     "    name: str\n",
     "    university: str\n",
-    "    department: str"
+    "    department: str = \"\""
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +66,7 @@
     "    # all table field values are insde <a> tags\n",
     "    fields = person.findAll(\"a\")\n",
     "\n",
-    "    name = fields[1].text           # second <a> always contains the name\n",
+    "    name = fields[1].text\n",
     "    department = fields[2].text\n",
     "\n",
     "    result.append(Person(\n",
@@ -86,108 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found 67 <tr> table row elements\n",
-      "<b>Johann\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tAbrams </b>\n",
-      "<b>Christian\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tAhlf </b>\n",
-      "<b>Jakob\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tAndersen </b>\n",
-      "<b>Behnisch\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tAwis </b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Ilona\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tBlanck </b>\n",
-      "<b>Holger\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tBrackelmann </b>\n",
-      "<b>Michael\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tBrodersen </b>\n",
-      "<b>Arne\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tBusch </b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Tobias\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tDe Gasperis </b>\n",
-      "<b>Maximilian\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tDe Muirier </b>\n",
-      "<b>Uwe\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tDoleschel </b>\n",
-      "<b>Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Timo\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tHäckel </b>\n",
-      "<b>Prof. Dr.-Ing.</b>\n",
-      "<b>Dr.</b>\n",
-      "<b>Torge\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tHinrichs </b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Holger\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tKlindtworth </b>\n",
-      "<b>Prof. Dr.-Ing.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Dr. rer. nat.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Tim\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tLuecke </b>\n",
-      "<b>Philip\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tMcClenaghan </b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Britta\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tMeyer </b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Malte\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tNogalski </b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Peter\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tRadzuweit </b>\n",
-      "<b>Jochen\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tRust </b>\n",
-      "<b>Daniel\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tSarnow </b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Tim\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tSchlachter </b>\n",
-      "<b>Knut\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tSchmahl </b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Dr. rer. nat.</b>\n",
-      "<b>Stefan\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tStanjek </b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Jörg\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tvon der Hülls </b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Beate\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tWaltrup </b>\n",
-      "<b>Prof. Dr.</b>\n",
-      "<b>Andrej\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\tZieger </b>\n",
-      "<b>Prof. Dr.</b>\n"
+      "[Person(name=' Johann Abrams', university='HAW Hamburg', department=''), Person(name=' Christian Ahlf', university='HAW Hamburg', department=''), Person(name=' Jakob Andersen', university='HAW Hamburg', department=''), Person(name=' Behnisch Awis', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Reinhard Baran', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Martin Becke', university='HAW Hamburg', department=''), Person(name=' Ilona Blanck', university='HAW Hamburg', department=''), Person(name=' Holger Brackelmann', university='HAW Hamburg', department=''), Person(name=' Michael Brodersen', university='HAW Hamburg', department=''), Person(name=' Arne Busch', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Bettina Buth', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Thomas Clemen', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Zhen Dai', university='HAW Hamburg', department=''), Person(name=' Tobias De Gasperis', university='HAW Hamburg', department=''), Person(name=' Maximilian De Muirier', university='HAW Hamburg', department=''), Person(name=' Uwe Doleschel', university='HAW Hamburg', department=''), Person(name=' Dr. Susanne Draheim', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Friedrich Esser', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Wolfgang Fohl', university='HAW Hamburg', department=''), Person(name=' Timo Häckel', university='HAW Hamburg', department=''), Person(name=' Prof. Dr.-Ing. Lars Hamann', university='HAW Hamburg', department=''), Person(name=' Dr. Frank Heitmann', university='HAW Hamburg', department=''), Person(name=' Torge Hinrichs', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Martin Hübner', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Philipp Jenke', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Bernd Kahlbrandt', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Christoph Klauck', university='HAW Hamburg', department=''), Person(name=' Holger Klindtworth', university='HAW Hamburg', department=''), Person(name=' Prof. Dr.-Ing. Bert-Uwe Köhler', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Michael Köhler-Bußmeier', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Franz Korf', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Klaus-Peter Kossakowski', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Thomas Lehmann', university='HAW Hamburg', department=''), Person(name=' Dr. rer. nat. Ulfia Lenfers', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Christian Lins', university='HAW Hamburg', department=''), Person(name=' Tim Luecke', university='HAW Hamburg', department=''), Person(name=' Philip McClenaghan', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Andreas Meisel', university='HAW Hamburg', department=''), Person(name=' Britta Meyer', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Michael Neitzke', university='HAW Hamburg', department=''), Person(name=' Malte Nogalski', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Julia Padberg', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Stephan Pareigis', university='HAW Hamburg', department=''), Person(name=' Peter Radzuweit', university='HAW Hamburg', department=''), Person(name=' Jochen Rust', university='HAW Hamburg', department=''), Person(name=' Daniel Sarnow', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Stefan Sarstedt', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Michael Schäfers', university='HAW Hamburg', department=''), Person(name=' Tim Schlachter', university='HAW Hamburg', department=''), Person(name=' Knut Schmahl', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Thomas Schmidt', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Axel Schmolitzky', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Martin Schultz', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Bernd Schwarz', university='HAW Hamburg', department=''), Person(name=' Dr. rer. nat. Benjamin Seppke', university='HAW Hamburg', department=''), Person(name=' Stefan Stanjek', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Ulrike Steffens', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Peer Stelldinger', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Jan Sudeikat', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Tim Tiedemann', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Marina Tropmann-Frick', university='HAW Hamburg', department=''), Person(name=' Jörg von der Hülls', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Kai von Luck', university='HAW Hamburg', department=''), Person(name=' Beate Waltrup', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Birgit Wendholt', university='HAW Hamburg', department=''), Person(name=' Andrej Zieger', university='HAW Hamburg', department=''), Person(name=' Prof. Dr. Olaf Zukunft', university='HAW Hamburg', department='')]\n"
      ]
     }
    ],
@@ -197,14 +104,23 @@
     "page = requests.get(haw_url)\n",
     "soup = BeautifulSoup(page.content, \"html.parser\")\n",
     "\n",
-    "# get all <tr> elements (here: rows of the person table)\n",
-    "rows = soup.find_all(\"div\", class_=\"row person-tile filter_tile border-top pt-4\")\n",
-    "print(f\"found {len(persons)} <tr> table row elements\")\n",
+    "result = []\n",
     "\n",
-    "for row in rows:\n",
-    "    person = row.find(\"div\", class_=\"col-9\")\n",
-    "    name = person.find(\"b\")\n",
-    "    print(name)"
+    "for row in soup.findAll(\"div\", class_=\"row person-tile filter_tile border-top pt-4\"):\n",
+    "    person = row.find(\"div\", class_=\"col-12\")\n",
+    "\n",
+    "    name = \"\"\n",
+    "\n",
+    "    for tag in person.findAll(\"a\", {\"title\" : \"Zur Profilseite\"}):\n",
+    "        for part in tag.findAll(\"b\"):\n",
+    "            name += \" \" + re.sub(r\"\\s+\", \" \", part.text.strip())\n",
+    "        result.append(Person(\n",
+    "            name=name,\n",
+    "            university=\"HAW Hamburg\"\n",
+    "        ))\n",
+    "\n",
+    "print(result)\n",
+    "    "
    ]
   }
  ],
@@ -224,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
